# homelife

./: .env.example  Dockerfile  MedSync.postman_collection.json  MedSync_AWS.postman_collection.json  README.md  RESUMEN_EJECUTIVO_CLIENTE.md  TESTING_AND_ACCESS.md  docker-compose.prod.yml  docker-compose.yml  integracion-tensiometro-Joytech DBP-6296B.md  pyproject.toml
app/: manage.py
app/core/: health.py  tests.py
app/devices/: admin.py  models.py  serializers.py  views.py
app/devices/migrations/: 0001_initial.py  0002_deviceprofile.py  0003_fix_glucometer_to_glucometro.py  0004_alter_device_device_type.py  0005_seed_oximetro_yk67b1.py  0006_deviceprofile_ble_bidirectional_and_seed_dbp6296b.py  0007_seed_glucometro_bg709b.py  0008_seed_bascula_jk100.py  0009_alter_device_types_include_bascula.py
app/measurements/: admin.py  models.py  serializers.py  views.py
app/measurements/migrations/: 0001_initial.py  0002_alter_measurement_parameter_type.py  0003_alter_measurement_parameter_type_add_scale.py
app/medsync/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
app/recommendations/: admin.py  engines.py  models.py  serializers.py  tests.py  views.py
app/recommendations/migrations/: 0001_initial.py  0002_diagnosticrule_recommendation_device_type_and_more.py  0003_seed_diagnostic_rules.py
app/reports/: admin.py  models.py  serializers.py  views.py
app/reports/migrations/: 0001_initial.py
app/users/: admin.py  models.py  serializers.py  views.py
app/users/migrations/: 0001_initial.py  (+1 more)
nginx/: default.conf
(+1 files in other folders)
